--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -3,20 +3,18 @@ body {
   font-family: Arial, sans-serif;
 }
 
-/* Sidebar styling */
-.sidebar {
-  height: 100vh;
-  width: 250px;
+/* .sidebar {
   position: fixed;
-  right: 0;
   top: 0;
-  background-color: #111;
+  right: 0;
+  width: 250;
+  height: 100vh;
+  background-color: #555;
   color: white;
-  overflow-y: auto;
+  padding: 10px;
   z-index: 9999;
-  padding-top: 20px;
-  display: none; /* Hidden by default */
-}
+  margin-left: 0px;
+} */
 
 /* Button styling */
 #toggleButton {
