changed notes so that the values entered are saved to local storage
1) changed textarea to an input element
2) added a message system that sends values from notes.js to background.js
3) added a message receiving system to save notes from notes.js into local storage

--- a/css/notes.css
+++ b/css/notes.css
@@ -3,7 +3,7 @@
     justify-content: center; /* horizontal centering */
     align-items: center;     /* vertical centering */
 
-    text-align: left;
+    text-align: start;
     height: 80vh;
     width: 95vw;
     box-sizing: border-box;
