--- a/css/notes.css
+++ b/css/notes.css
@@ -1,12 +1,45 @@
-.container{
-    display: flex;
-    justify-content: center; /* horizontal centering */
-    align-items: center;     /* vertical centering */
+html,
+* {
+  margin: 0;
+  padding: 0;
+}
 
-    text-align: start;
-    height: 80vh;
-    width: 95vw;
-    box-sizing: border-box;
-    resize: none;
-    line-height: 1.5;
+html {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  line-height: 1.5;
+}
+
+#note_area {
+  width: 100%;
+  height: 80%;
+  padding: 10px;
+  box-sizing: border-box;
+  resize: none;
+  text-align: left;
+  vertical-align: top; /* doesn't work on textarea */
+}
+
+.input_area {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90%;
+  height: 80%;
+  gap: 10px;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 5px;
+  margin: 0;
 }
