Save notes completed
When save button is pressed, all input from notes is saved onto chrome.storage.local and then immediately displayed as a button on sidebar. When button is clicked, contents are saved. This saving feature can be removed. A delete button must be developed now

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -47,6 +47,12 @@ body {
   z-index: 10000;
 }
 
+#notesContainer {
+  padding: 20px;
+  color: white;
+  font-size: 16px;
+}
+
 /* {
   "matches": ["<all_urls>"],
   "js": ["script/sidebar.js"],
