--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,3 +1,9 @@
+/*-This css file can later be updated to be used to style the sidebar and index.html files. 
+As of 05/27/2025, this file is not used in any file.
+Instead, the same styling functionalitites are used in injectSidebar.js through sidebar.style
+Additonally the html aspects of the sidebar are through sidebar.innerHTML
+For dependancies and minimizing the amount of code in each file, the css and html aspects of the js files should be dispersed*/
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -35,7 +41,7 @@ body {
   position: fixed;
   top: 20px;
   right: 270px;
-  padding: 10px 15px;   
+  padding: 50px 15px;   
   font-size: 16px;
   background-color: #4CAF50;
   color: white;
