--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -9,6 +9,14 @@ body {
   font-family: Arial, sans-serif;
 }
 
+
+
+
+
+
+
+
+
 /* .sidebar {
   position: fixed;
   top: 0;
@@ -21,10 +29,10 @@ body {
   z-index: 9999;
   margin-left: 0px;
 } */
-
+/*
 .sidebar button {
   background-color: #4CAF50;
-  color: black;
+  color: white;
   border: none;
   padding: 10px;
   text-align: center;
@@ -36,7 +44,6 @@ body {
   font-size: 16px;
 }
 
-/* Button styling */
 #toggleButton {
   position: fixed;
   top: 20px;
@@ -50,10 +57,4 @@ body {
   cursor: pointer;
   z-index: 10000;
 }
-
-/* {
-  "matches": ["<all_urls>"],
-  "js": ["script/sidebar.js"],
-  "css": ["css/sidebar.css"]
-}
-] */
+ */
