--- a/css/notes.css
+++ b/css/notes.css
@@ -1,3 +1,17 @@
+html, body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .container{
     display: flex;
     justify-content: center; /* horizontal centering */
@@ -9,4 +23,36 @@
     box-sizing: border-box;
     resize: none;
     line-height: 1.5;
+}
+
+#content {
+    width: 95%;
+    height: 85%;
+    resize: none;
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+
+#note_container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex: 9;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+#button_container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+#title_input{
+    text-align: center;
+    width: 95%;
 }
